# molid

./: .gitignore  README.md  config.yaml  install.sh  install_dependencies.sh  molid-deploy-key  molid-deploy-key.pub  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yaml  lint-test.yaml  pypi-publish.yaml
OpenBabel/: .gitignore  process_pubchem_data.py  simple_progress_bar.py
OpenBabel/MolID/: README.md  pyproject.toml
OpenBabel/MolID/molid/: __init__.py
OpenBabel/MolID/molid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
OpenBabel/MolID/molid/pubchemproc/: __init__.py  query.py
OpenBabel/MolID/molid/utils/: conversion.py
OpenBabel/MolID/tests/: test_pubchemproc.py
OpenBabel/data/: Pubchem_datafolder_size.ods
archive/molid/: __init__.py
archive/molid/utils/: __init__.py
molid/: __init__.py  cli.py  main.py  pipeline.py  run.py
molid/db/: __init__.py  cas_enrich.py  database.py  db_manager.py  db_utils.py  offline_db_cli.py  schema.py  search.py  sqlite_manager.py
molid/pubchem_api/: __init__.py  cache.py  fetch.py  offline.py
molid/pubchemproc/: __init__.py  cache.py  fetch.py  file_handler.py  pubchem.py  pubchem_client.py  query.py
molid/search/: db_lookup.py  service.py
molid/utils/: config_loader.py  conversion.py  disk_utils.py  formula.py  ftp_utils.py  identifiers.py  settings.py
tests/: conftest.py  test_auto_mode.py  test_cache_and_lookup.py  test_cas_enrich_engine.py  test_cas_pipeline.py  test_cli.py  test_db.py  test_db_basic.py  test_db_utils.py  test_file_handler_utils.py  test_identifiers_formula.py  test_main.py  test_offline_db_cli_flow.py  test_pipeline.py  test_pipeline_and_main.py  test_pubchem_client_fetch.py  test_pubchemproc.py  test_service.py  test_settings.py  test_sqlite_manager.py  test_utils.py
tests/data/: test_cache.db  test_master.db
