[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molid"
version = "0.8.4"
description = "A package for processing PubChem data and managing a database of chemical compounds."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Thea Denell", email = "thea.denell@physik.hu-berlin.de" }]
license = { file = "LICENSE" }
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

dependencies = [
  "click >= 8.0",
  "ase >= 1.1.7",
  "appdirs >= 1.4",
  "psutil >= 5.0.0",
  "pydantic >= 2.0",
  "pydantic-settings >= 2.0",
  "requests >= 2.20.0",
  "tqdm",
]

[project.optional-dependencies]
openbabel = ["openbabel-wheel"]  # For XYZ → InChIKey conversion

[dependency-groups]
dev = [
  "pytest",
  "ruff"
]

[project.scripts]
molid = "molid.cli:cli"

[tool.setuptools.packages.find]
include = ["molid*"]
exclude = ["processed", "downloads", "tests"]
